--- a/static/newsletter/newsletter-14.html
+++ b/static/newsletter/newsletter-14.html
@@ -141,7 +141,7 @@
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mimikittenz" target="_blank"><img src="https://offsec.tools/img/tools/mimikittenz.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mimikittenz" target="_blank"><img src="https://assets.offsec.tools/tools/mimikittenz-9237.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -155,7 +155,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/suid3num" target="_blank"><img src="https://offsec.tools/img/tools/c54f6951b520a70fb3a5b5c77d4121e6.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/suid3num" target="_blank"><img src="https://assets.offsec.tools/tools/suid3num-7385.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -169,7 +169,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/shellpop" target="_blank"><img src="https://offsec.tools/img/tools/shellpop.jpeg" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/shellpop" target="_blank"><img src="https://assets.offsec.tools/tools/shellpop-7589.jpeg" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -183,7 +183,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dirstalk" target="_blank"><img src="https://offsec.tools/img/tools/dirstalk.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dirstalk" target="_blank"><img src="https://assets.offsec.tools/tools/dirstalk-8636.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -197,7 +197,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/tplmap" target="_blank"><img src="https://offsec.tools/img/tools/tplmap.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/tplmap" target="_blank"><img src="https://assets.offsec.tools/tools/tplmap-8854.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -211,7 +211,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mx-takeover" target="_blank"><img src="https://offsec.tools/img/tools/mx-takeover.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mx-takeover" target="_blank"><img src="https://assets.offsec.tools/tools/mx-takeover-1598.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -225,7 +225,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/burp-suite" target="_blank"><img src="https://offsec.tools/img/tools/burp-suite.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/burp-suite" target="_blank"><img src="https://assets.offsec.tools/tools/burp-suite-1787.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -239,7 +239,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/kiterunner" target="_blank"><img src="https://offsec.tools/img/tools/864ae0dcd0cc0523032b2ac498c6479c.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/kiterunner" target="_blank"><img src="https://assets.offsec.tools/tools/kiterunner-6260.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -253,7 +253,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/graphql-beautifier" target="_blank"><img src="https://offsec.tools/img/tools/graphql-beautifier.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/graphql-beautifier" target="_blank"><img src="https://assets.offsec.tools/tools/graphql-beautifier-5573.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -267,7 +267,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/searchsploit" target="_blank"><img src="https://offsec.tools/img/tools/searchsploit.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/searchsploit" target="_blank"><img src="https://assets.offsec.tools/tools/searchsploit-5661.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -291,7 +291,7 @@
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/pyrit" target="_blank"><img src="https://offsec.tools/img/tools/50d2d4f4067930c18d50a3095f18566a.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/pyrit" target="_blank"><img src="https://assets.offsec.tools/tools/pyrit-8599.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/pyrit" class="nicename" target="_blank">Pyrit</a></td>
                     </tr>
                     <tr>
@@ -301,7 +301,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/zarp" target="_blank"><img src="https://offsec.tools/img/tools/cc667218dd579b87b03b49e68e5e2f28.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/zarp" target="_blank"><img src="https://assets.offsec.tools/tools/zarp-9880.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/zarp" class="nicename" target="_blank">zarp</a></td>
                     </tr>
                     <tr>
@@ -311,7 +311,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/git-secrets" target="_blank"><img src="https://offsec.tools/img/tools/ad5a0e28bcf3aad785e88bf6d8190f30.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/git-secrets" target="_blank"><img src="https://assets.offsec.tools/tools/git-secrets-5802.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/git-secrets" class="nicename" target="_blank">git-secrets</a></td>
                     </tr>
                     <tr>
@@ -321,7 +321,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/talisman" target="_blank"><img src="https://offsec.tools/img/tools/c3b307dd2499e685885a089cf8ea8a76.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/talisman" target="_blank"><img src="https://assets.offsec.tools/tools/talisman-1373.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/talisman" class="nicename" target="_blank">talisman</a></td>
                     </tr>
                     <tr>
@@ -331,7 +331,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/repo-supervisor" target="_blank"><img src="https://offsec.tools/img/tools/0b067110ed36d01c4b8f71f6f1a7a824.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/repo-supervisor" target="_blank"><img src="https://assets.offsec.tools/tools/repo-supervisor-3521.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/repo-supervisor" class="nicename" target="_blank">repo-supervisor</a></td>
                     </tr>
                     <tr>
@@ -341,7 +341,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/appmon" target="_blank"><img src="https://offsec.tools/img/tools/07b33ffd5d140ad777e26fbe822e0541.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/appmon" target="_blank"><img src="https://assets.offsec.tools/tools/appmon-4276.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/appmon" class="nicename" target="_blank">appmon</a></td>
                     </tr>
                     <tr>
@@ -351,7 +351,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/hcxdumptool" target="_blank"><img src="https://offsec.tools/img/tools/f9f83609c92fdbdd91f74109d7fc589e.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/hcxdumptool" target="_blank"><img src="https://assets.offsec.tools/tools/hcxdumptool-8452.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/hcxdumptool" class="nicename" target="_blank">hcxdumptool</a></td>
                     </tr>
                     <tr>
@@ -361,7 +361,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jndi-injection-exploit" target="_blank"><img src="https://offsec.tools/img/tools/8822165bbd78d5e65e1ba37a13079f8a.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jndi-injection-exploit" target="_blank"><img src="https://assets.offsec.tools/tools/jndi-injection-exploit-2092.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/jndi-injection-exploit" class="nicename" target="_blank">JNDI-Injection-Exploit</a></td>
                     </tr>
                     <tr>
@@ -371,7 +371,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/morphhta" target="_blank"><img src="https://offsec.tools/img/tools/ef7b02624a033b6401626864bd15e943.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/morphhta" target="_blank"><img src="https://assets.offsec.tools/tools/morphhta-7824.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/morphhta" class="nicename" target="_blank">morphHTA</a></td>
                     </tr>
                     <tr>
@@ -381,7 +381,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/murphysec" target="_blank"><img src="https://offsec.tools/img/tools/14211be4f659247867e85ea35b2b4bb3.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/murphysec" target="_blank"><img src="https://assets.offsec.tools/tools/murphysec-2798.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/murphysec" class="nicename" target="_blank">murphysec</a></td>
                     </tr>
                     <tr>
