--- a/static/newsletter/newsletter-15.html
+++ b/static/newsletter/newsletter-15.html
@@ -141,7 +141,7 @@
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mx-takeover" target="_blank"><img src="https://offsec.tools/img/tools/mx-takeover.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mx-takeover" target="_blank"><img src="https://assets.offsec.tools/tools/mx-takeover-1598.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -155,7 +155,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/vajra" target="_blank"><img src="https://offsec.tools/img/tools/vajra.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/vajra" target="_blank"><img src="https://assets.offsec.tools/tools/vajra-3068.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -169,7 +169,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/portswigger-websecurity-academy" target="_blank"><img src="https://offsec.tools/img/tools/portswigger-websecurity-academy.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/portswigger-websecurity-academy" target="_blank"><img src="https://assets.offsec.tools/tools/portswigger-websecurity-academy-6589.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -183,7 +183,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/freddy-deserialization-bug-finder" target="_blank"><img src="https://offsec.tools/img/tools/freddy-deserialization-bug-finder.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/freddy-deserialization-bug-finder" target="_blank"><img src="https://assets.offsec.tools/tools/freddy-deserialization-bug-finder-7020.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -197,7 +197,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/shadow-workers" target="_blank"><img src="https://offsec.tools/img/tools/shadow-workers.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/shadow-workers" target="_blank"><img src="https://assets.offsec.tools/tools/shadow-workers-3840.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -211,7 +211,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyfiscan" target="_blank"><img src="https://offsec.tools/img/tools/pyfiscan.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyfiscan" target="_blank"><img src="https://assets.offsec.tools/tools/pyfiscan-3833.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -225,7 +225,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyexfil" target="_blank"><img src="https://offsec.tools/img/tools/pyexfil.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyexfil" target="_blank"><img src="https://assets.offsec.tools/tools/pyexfil-2594.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -239,7 +239,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/brutespray" target="_blank"><img src="https://offsec.tools/img/tools/brutespray.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/brutespray" target="_blank"><img src="https://assets.offsec.tools/tools/brutespray-1436.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -253,7 +253,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/xsswagger" target="_blank"><img src="https://offsec.tools/img/tools/xsswagger.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/xsswagger" target="_blank"><img src="https://assets.offsec.tools/tools/xsswagger-1036.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -267,7 +267,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/socialhunter" target="_blank"><img src="https://offsec.tools/img/tools/629f491ebe28dd0663c10bb0d77df12a.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/socialhunter" target="_blank"><img src="https://assets.offsec.tools/tools/socialhunter-2887.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -291,7 +291,7 @@
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/sysreptor" target="_blank"><img src="https://offsec.tools/img/tools/a06d2ebb2a570927d26bfec00db05ace.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/sysreptor" target="_blank"><img src="https://assets.offsec.tools/tools/sysreptor-6861.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/sysreptor" class="nicename" target="_blank">SysReptor</a></td>
                     </tr>
                     <tr>
@@ -301,7 +301,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/lazagne" target="_blank"><img src="https://offsec.tools/img/tools/4f9a67662cdcd5e800bd23e666919778.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/lazagne" target="_blank"><img src="https://assets.offsec.tools/tools/lazagne-7900.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/lazagne" class="nicename" target="_blank">LaZagne</a></td>
                     </tr>
                     <tr>
@@ -311,7 +311,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/cloudsploit" target="_blank"><img src="https://offsec.tools/img/tools/1012d867c837148dff2bc307282e99f1.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/cloudsploit" target="_blank"><img src="https://assets.offsec.tools/tools/cloudsploit-9326.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/cloudsploit" class="nicename" target="_blank">cloudsploit</a></td>
                     </tr>
                     <tr>
@@ -321,7 +321,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/archerysec" target="_blank"><img src="https://offsec.tools/img/tools/77f0949f56ba4aa646ae57ebc9f5c25b.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/archerysec" target="_blank"><img src="https://assets.offsec.tools/tools/archerysec-7203.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/archerysec" class="nicename" target="_blank">archerysec</a></td>
                     </tr>
                     <tr>
@@ -331,7 +331,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/dnsexfiltrator" target="_blank"><img src="https://offsec.tools/img/tools/160b5d0a3b27eca6c4bbc34b11411319.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/dnsexfiltrator" target="_blank"><img src="https://assets.offsec.tools/tools/dnsexfiltrator-5791.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/dnsexfiltrator" class="nicename" target="_blank">DNSExfiltrator</a></td>
                     </tr>
                     <tr>
@@ -341,7 +341,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/csrf-scanner" target="_blank"><img src="https://offsec.tools/img/tools/8a2a881dac5a35da3a19de5a23253d71.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/csrf-scanner" target="_blank"><img src="https://assets.offsec.tools/tools/csrf-scanner-3945.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/csrf-scanner" class="nicename" target="_blank">csrf-scanner</a></td>
                     </tr>
                     <tr>
@@ -351,7 +351,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/additional-scanner-checks" target="_blank"><img src="https://offsec.tools/img/tools/b8470cfda553a188cc488bb3ae66cf6c.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/additional-scanner-checks" target="_blank"><img src="https://assets.offsec.tools/tools/additional-scanner-checks-8374.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/additional-scanner-checks" class="nicename" target="_blank">additional-scanner-checks</a></td>
                     </tr>
                     <tr>
@@ -361,7 +361,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/403-bypasser" target="_blank"><img src="https://offsec.tools/img/tools/806da08620cd1e5f008f8d133030e134.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/403-bypasser" target="_blank"><img src="https://assets.offsec.tools/tools/403-bypasser-7363.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/403-bypasser" class="nicename" target="_blank">403-bypasser</a></td>
                     </tr>
                     <tr>
@@ -371,7 +371,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/json-web-tokens" target="_blank"><img src="https://offsec.tools/img/tools/7cbbf99cc5738e31c3e2cf0fdab5b478.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/json-web-tokens" target="_blank"><img src="https://assets.offsec.tools/tools/json-web-tokens-9559.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/json-web-tokens" class="nicename" target="_blank">json-web-tokens</a></td>
                     </tr>
                     <tr>
@@ -381,7 +381,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/co2" target="_blank"><img src="https://offsec.tools/img/tools/1915ec359749a0c0f3961c33ed3dbee8.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/co2" target="_blank"><img src="https://assets.offsec.tools/tools/co2-9338.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/co2" class="nicename" target="_blank">co2</a></td>
                     </tr>
                     <tr>
@@ -391,7 +391,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/seela" target="_blank"><img src="https://offsec.tools/img/tools/af89b967980327daf35a0502a68f983a.jpg" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/seela" target="_blank"><img src="https://assets.offsec.tools/tools/seela-7302.jpg" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/seela" class="nicename" target="_blank">Seela</a></td>
                     </tr>
                     <tr>
