--- a/static/newsletter/newsletter-17.html
+++ b/static/newsletter/newsletter-17.html
@@ -141,7 +141,7 @@
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/cdn-proxy" target="_blank"><img src="https://offsec.tools/img/tools/cdn-proxy.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/cdn-proxy" target="_blank"><img src="https://assets.offsec.tools/tools/cdn-proxy-7899.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -155,7 +155,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/backslash-powered-scanner" target="_blank"><img src="https://offsec.tools/img/tools/backslash-powered-scanner.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/backslash-powered-scanner" target="_blank"><img src="https://assets.offsec.tools/tools/backslash-powered-scanner-5170.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -169,7 +169,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/xsshunter" target="_blank"><img src="https://offsec.tools/img/tools/xsshunter.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/xsshunter" target="_blank"><img src="https://assets.offsec.tools/tools/xsshunter-9723.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -183,7 +183,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/arjun" target="_blank"><img src="https://offsec.tools/img/tools/arjun.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/arjun" target="_blank"><img src="https://assets.offsec.tools/tools/arjun-5681.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -197,7 +197,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pypykatz" target="_blank"><img src="https://offsec.tools/img/tools/pypykatz.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pypykatz" target="_blank"><img src="https://assets.offsec.tools/tools/pypykatz-6350.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -211,7 +211,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/backslash-powered-scanner" target="_blank"><img src="https://offsec.tools/img/tools/backslash-powered-scanner.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/backslash-powered-scanner" target="_blank"><img src="https://assets.offsec.tools/tools/backslash-powered-scanner-5170.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -225,7 +225,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/sentryssrf" target="_blank"><img src="https://offsec.tools/img/tools/sentryssrf.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/sentryssrf" target="_blank"><img src="https://assets.offsec.tools/tools/sentryssrf-4866.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -239,7 +239,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/smbcrawler" target="_blank"><img src="https://offsec.tools/img/tools/88ece6a210201d88a45c6bc9dbc03030.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/smbcrawler" target="_blank"><img src="https://assets.offsec.tools/tools/smbcrawler-5100.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -253,7 +253,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/cloudbrute" target="_blank"><img src="https://offsec.tools/img/tools/cloudbrute.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/cloudbrute" target="_blank"><img src="https://assets.offsec.tools/tools/cloudbrute-6823.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -267,7 +267,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ssh-auditor" target="_blank"><img src="https://offsec.tools/img/tools/ssh-auditor.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ssh-auditor" target="_blank"><img src="https://assets.offsec.tools/tools/ssh-auditor-2041.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -291,7 +291,7 @@
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/smbcrawler" target="_blank"><img src="https://offsec.tools/img/tools/88ece6a210201d88a45c6bc9dbc03030.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/smbcrawler" target="_blank"><img src="https://assets.offsec.tools/tools/smbcrawler-5100.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/smbcrawler" class="nicename" target="_blank">smbcrawler</a></td>
                     </tr>
                     <tr>
@@ -301,7 +301,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/prenum" target="_blank"><img src="https://offsec.tools/img/tools/390e571ad6cbeaca09af207b25dc85f8.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/prenum" target="_blank"><img src="https://assets.offsec.tools/tools/prenum-9193.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/prenum" class="nicename" target="_blank">Prenum</a></td>
                     </tr>
                     <tr>
@@ -311,7 +311,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/ps2" target="_blank"><img src="https://offsec.tools/img/tools/1e7d2b28d4ede2ac956999adc6402fac.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/ps2" target="_blank"><img src="https://assets.offsec.tools/tools/ps2-6970.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/ps2" class="nicename" target="_blank">PS2</a></td>
                     </tr>
                     <tr>
@@ -321,7 +321,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/osint-spy" target="_blank"><img src="https://offsec.tools/img/tools/632a0cdd71fa8ab16bb7b2f791c615cd.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/osint-spy" target="_blank"><img src="https://assets.offsec.tools/tools/osint-spy-7811.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/osint-spy" class="nicename" target="_blank">OSINT-SPY</a></td>
                     </tr>
                     <tr>
@@ -331,7 +331,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/androset" target="_blank"><img src="https://offsec.tools/img/tools/75152587d80f9bd65e8f13f8e4c57358.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/androset" target="_blank"><img src="https://assets.offsec.tools/tools/androset-5658.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/androset" class="nicename" target="_blank">AndroSet</a></td>
                     </tr>
                     <tr>
@@ -341,7 +341,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/passivedns" target="_blank"><img src="https://offsec.tools/img/tools/15e9b8e77ca3bd1c7f15914dfd410bb7.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/passivedns" target="_blank"><img src="https://assets.offsec.tools/tools/passivedns-7088.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/passivedns" class="nicename" target="_blank">passiveDNS</a></td>
                     </tr>
                     <tr>
@@ -351,7 +351,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/pywerview" target="_blank"><img src="https://offsec.tools/img/tools/97a7b1272f93ae79f6432014170b50d7.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/pywerview" target="_blank"><img src="https://assets.offsec.tools/tools/pywerview-9176.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/pywerview" class="nicename" target="_blank">pywerview</a></td>
                     </tr>
                     <tr>
