--- a/static/newsletter/newsletter-18.html
+++ b/static/newsletter/newsletter-18.html
@@ -141,7 +141,7 @@
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/proxmark3" target="_blank"><img src="https://offsec.tools/img/tools/b54b75975525af8d38318fde97bd04d3.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/proxmark3" target="_blank"><img src="https://assets.offsec.tools/tools/proxmark3-4493.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -155,7 +155,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/awsgoat" target="_blank"><img src="https://offsec.tools/img/tools/awsgoat.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/awsgoat" target="_blank"><img src="https://assets.offsec.tools/tools/awsgoat-6552.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -169,7 +169,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/autorize" target="_blank"><img src="https://offsec.tools/img/tools/autorize.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/autorize" target="_blank"><img src="https://assets.offsec.tools/tools/autorize-5969.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -183,7 +183,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/kismet" target="_blank"><img src="https://offsec.tools/img/tools/kismet.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/kismet" target="_blank"><img src="https://assets.offsec.tools/tools/kismet-6185.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -197,7 +197,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/hardhat-c2" target="_blank"><img src="https://offsec.tools/img/tools/e686c0ff73ce7fc54f0e03d084e18651.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/hardhat-c2" target="_blank"><img src="https://assets.offsec.tools/tools/hardhat-c2-5629.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -211,7 +211,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/bounty-targets-data" target="_blank"><img src="https://offsec.tools/img/tools/bounty-targets-data.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/bounty-targets-data" target="_blank"><img src="https://assets.offsec.tools/tools/bounty-targets-data-9520.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -225,7 +225,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/eldap-ldap-search-and-filter" target="_blank"><img src="https://offsec.tools/img/tools/eldap-ldap-search-and-filter.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/eldap-ldap-search-and-filter" target="_blank"><img src="https://assets.offsec.tools/tools/eldap-ldap-search-and-filter-3144.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -239,7 +239,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/bfac" target="_blank"><img src="https://offsec.tools/img/tools/bfac.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/bfac" target="_blank"><img src="https://assets.offsec.tools/tools/bfac-4612.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -253,7 +253,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyshell" target="_blank"><img src="https://offsec.tools/img/tools/pyshell.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyshell" target="_blank"><img src="https://assets.offsec.tools/tools/pyshell-4129.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -267,7 +267,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/regstrike" target="_blank"><img src="https://offsec.tools/img/tools/e1018ddcc287d3505c8017b32bfea53f.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/regstrike" target="_blank"><img src="https://assets.offsec.tools/tools/regstrike-9019.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -291,7 +291,7 @@
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/attifyos" target="_blank"><img src="https://offsec.tools/img/tools/521fe0eeae5e4b8052005bfd3b9d31ae.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/attifyos" target="_blank"><img src="https://assets.offsec.tools/tools/attifyos-5994.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/attifyos" class="nicename" target="_blank">AttifyOS</a></td>
                     </tr>
                     <tr>
@@ -301,7 +301,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/empire" target="_blank"><img src="https://offsec.tools/img/tools/55229307bc92a9663f2cc53aac2a20c8.jpeg" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/empire" target="_blank"><img src="https://assets.offsec.tools/tools/empire-9158.jpeg" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/empire" class="nicename" target="_blank">Empire</a></td>
                     </tr>
                     <tr>
@@ -311,7 +311,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/starkiller" target="_blank"><img src="https://offsec.tools/img/tools/62df56971791a450bf401c55f1464078.gif" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/starkiller" target="_blank"><img src="https://assets.offsec.tools/tools/starkiller-2888.gif" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/starkiller" class="nicename" target="_blank">Starkiller</a></td>
                     </tr>
                     <tr>
@@ -321,7 +321,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/caldera" target="_blank"><img src="https://offsec.tools/img/tools/c420279e788de271776a8bbcbe4a82f0.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/caldera" target="_blank"><img src="https://assets.offsec.tools/tools/caldera-7957.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/caldera" class="nicename" target="_blank">Caldera</a></td>
                     </tr>
                     <tr>
@@ -331,7 +331,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/bloodhound" target="_blank"><img src="https://offsec.tools/img/tools/00a3eb28a107198f3905c278b6139a79.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/bloodhound" target="_blank"><img src="https://assets.offsec.tools/tools/bloodhound-6875.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/bloodhound" class="nicename" target="_blank">BloodHound</a></td>
                     </tr>
                     <tr>
@@ -341,7 +341,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/crackmapexec" target="_blank"><img src="https://offsec.tools/img/tools/2926b01793452c60cd42aff92e75e7bc.jpg" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/crackmapexec" target="_blank"><img src="https://assets.offsec.tools/tools/crackmapexec-1957.jpg" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/crackmapexec" class="nicename" target="_blank">CrackMapExec</a></td>
                     </tr>
                     <tr>
