--- a/static/newsletter/newsletter-19.html
+++ b/static/newsletter/newsletter-19.html
@@ -142,7 +142,7 @@
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/extract-endpoints" target="_blank"><img src="https://offsec.tools/img/tools/extract-endpoints.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/extract-endpoints" target="_blank"><img src="https://assets.offsec.tools/tools/extract-endpoints-1940.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -156,7 +156,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/yersinia" target="_blank"><img src="https://offsec.tools/img/tools/yersinia.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/yersinia" target="_blank"><img src="https://assets.offsec.tools/tools/yersinia-9428.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -170,7 +170,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/iamagic" target="_blank"><img src="https://offsec.tools/img/tools/iamagic.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/iamagic" target="_blank"><img src="https://assets.offsec.tools/tools/iamagic-3619.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -184,7 +184,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ssrftest" target="_blank"><img src="https://offsec.tools/img/tools/ssrftest.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ssrftest" target="_blank"><img src="https://assets.offsec.tools/tools/ssrftest-1118.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -198,7 +198,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/msldap" target="_blank"><img src="https://offsec.tools/img/tools/msldap.gif" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/msldap" target="_blank"><img src="https://assets.offsec.tools/tools/msldap-1129.gif" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -212,7 +212,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/tamper-data" target="_blank"><img src="https://offsec.tools/img/tools/tamper-data.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/tamper-data" target="_blank"><img src="https://assets.offsec.tools/tools/tamper-data-8098.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -226,7 +226,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/adenum" target="_blank"><img src="https://offsec.tools/img/tools/adenum.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/adenum" target="_blank"><img src="https://assets.offsec.tools/tools/adenum-4342.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -240,7 +240,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/caldera" target="_blank"><img src="https://offsec.tools/img/tools/c420279e788de271776a8bbcbe4a82f0.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/caldera" target="_blank"><img src="https://assets.offsec.tools/tools/caldera-7957.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -254,7 +254,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/stok-fredrik" target="_blank"><img src="https://offsec.tools/img/tools/stok-fredrik.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/stok-fredrik" target="_blank"><img src="https://assets.offsec.tools/tools/stok-fredrik-2784.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -268,7 +268,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/striker" target="_blank"><img src="https://offsec.tools/img/tools/striker.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/striker" target="_blank"><img src="https://assets.offsec.tools/tools/striker-1997.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -292,7 +292,7 @@
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/attifyos" target="_blank"><img src="https://offsec.tools/img/tools/521fe0eeae5e4b8052005bfd3b9d31ae.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/attifyos" target="_blank"><img src="https://assets.offsec.tools/tools/attifyos-5994.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/attifyos" class="nicename" target="_blank">AttifyOS</a></td>
                     </tr>
                     <tr>
@@ -302,7 +302,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/empire" target="_blank"><img src="https://offsec.tools/img/tools/55229307bc92a9663f2cc53aac2a20c8.jpeg" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/empire" target="_blank"><img src="https://assets.offsec.tools/tools/empire-9158.jpeg" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/empire" class="nicename" target="_blank">Empire</a></td>
                     </tr>
                     <tr>
@@ -312,7 +312,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/starkiller" target="_blank"><img src="https://offsec.tools/img/tools/62df56971791a450bf401c55f1464078.gif" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/starkiller" target="_blank"><img src="https://assets.offsec.tools/tools/starkiller-2888.gif" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/starkiller" class="nicename" target="_blank">Starkiller</a></td>
                     </tr>
                     <tr>
@@ -322,7 +322,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/caldera" target="_blank"><img src="https://offsec.tools/img/tools/c420279e788de271776a8bbcbe4a82f0.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/caldera" target="_blank"><img src="https://assets.offsec.tools/tools/caldera-7957.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/caldera" class="nicename" target="_blank">Caldera</a></td>
                     </tr>
                     <tr>
@@ -332,7 +332,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/bloodhound" target="_blank"><img src="https://offsec.tools/img/tools/00a3eb28a107198f3905c278b6139a79.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/bloodhound" target="_blank"><img src="https://assets.offsec.tools/tools/bloodhound-6875.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/bloodhound" class="nicename" target="_blank">BloodHound</a></td>
                     </tr>
                     <tr>
@@ -342,7 +342,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/crackmapexec" target="_blank"><img src="https://offsec.tools/img/tools/2926b01793452c60cd42aff92e75e7bc.jpg" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/crackmapexec" target="_blank"><img src="https://assets.offsec.tools/tools/crackmapexec-1957.jpg" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/crackmapexec" class="nicename" target="_blank">CrackMapExec</a></td>
                     </tr>
                     <tr>
