--- a/static/newsletter/newsletter-21.html
+++ b/static/newsletter/newsletter-21.html
@@ -142,7 +142,7 @@
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/jwt-tool" target="_blank"><img src="https://offsec.tools/img/tools/jwt-tool.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/jwt-tool" target="_blank"><img src="https://assets.offsec.tools/tools/jwt-tool-4742.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -156,7 +156,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/nmap-query-xml" target="_blank"><img src="https://offsec.tools/img/tools/nmap-query-xml.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/nmap-query-xml" target="_blank"><img src="https://assets.offsec.tools/tools/nmap-query-xml-6467.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -170,7 +170,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/badsecrets" target="_blank"><img src="https://offsec.tools/img/tools/d51f0e933b72e319bfa1e4b9825d087d.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/badsecrets" target="_blank"><img src="https://assets.offsec.tools/tools/badsecrets-9933.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -184,7 +184,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/webscreenshot" target="_blank"><img src="https://offsec.tools/img/tools/webscreenshot.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/webscreenshot" target="_blank"><img src="https://assets.offsec.tools/tools/webscreenshot-6461.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -198,7 +198,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pcredz" target="_blank"><img src="https://offsec.tools/img/tools/pcredz.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pcredz" target="_blank"><img src="https://assets.offsec.tools/tools/pcredz-2046.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -212,7 +212,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dnstracer" target="_blank"><img src="https://offsec.tools/img/tools/dnstracer.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dnstracer" target="_blank"><img src="https://assets.offsec.tools/tools/dnstracer-3738.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -226,7 +226,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/eyeballer" target="_blank"><img src="https://offsec.tools/img/tools/eyeballer.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/eyeballer" target="_blank"><img src="https://assets.offsec.tools/tools/eyeballer-9512.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -240,7 +240,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/autopwn" target="_blank"><img src="https://offsec.tools/img/tools/autopwn.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/autopwn" target="_blank"><img src="https://assets.offsec.tools/tools/autopwn-5618.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -254,7 +254,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/w3af" target="_blank"><img src="https://offsec.tools/img/tools/w3af.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/w3af" target="_blank"><img src="https://assets.offsec.tools/tools/w3af-9318.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -268,7 +268,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/xray" target="_blank"><img src="https://offsec.tools/img/tools/xray.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/xray" target="_blank"><img src="https://assets.offsec.tools/tools/xray-1030.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -292,7 +292,7 @@
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/karma-v2" target="_blank"><img src="https://offsec.tools/img/tools/e00051321a0317fb70640d9b9374a426.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/karma-v2" target="_blank"><img src="https://assets.offsec.tools/tools/karma-v2-1376.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/karma-v2" class="nicename" target="_blank">karma v2</a></td>
                     </tr>
                     <tr>
@@ -302,7 +302,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/shosubgo" target="_blank"><img src="https://offsec.tools/img/tools/7270254b679d43763c7eb130ada75b5d.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/shosubgo" target="_blank"><img src="https://assets.offsec.tools/tools/shosubgo-4423.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/shosubgo" class="nicename" target="_blank">shosubgo</a></td>
                     </tr>
                     <tr>
@@ -312,7 +312,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/bbot" target="_blank"><img src="https://offsec.tools/img/tools/6d3ec7e250f6529c2e99e6ef956f0d14.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/bbot" target="_blank"><img src="https://assets.offsec.tools/tools/bbot-2106.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/bbot" class="nicename" target="_blank">bbot</a></td>
                     </tr>
                     <tr>
@@ -322,7 +322,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/resolvers" target="_blank"><img src="https://offsec.tools/img/tools/6ddf40c1e8b1df6bfea079bceefa778c.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/resolvers" target="_blank"><img src="https://assets.offsec.tools/tools/resolvers-5324.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/resolvers" class="nicename" target="_blank">resolvers</a></td>
                     </tr>
                     <tr>
@@ -332,7 +332,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/favfreak" target="_blank"><img src="https://offsec.tools/img/tools/44f75c6d460a831a75cfe13ecfcbef7a.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/favfreak" target="_blank"><img src="https://assets.offsec.tools/tools/favfreak-1843.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/favfreak" class="nicename" target="_blank">FavFreak</a></td>
                     </tr>
                     <tr>
@@ -342,7 +342,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/kaeferjaeger" target="_blank"><img src="https://offsec.tools/img/tools/e236adc34d613f5e18b993a310473321.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/kaeferjaeger" target="_blank"><img src="https://assets.offsec.tools/tools/kaeferjaeger-6058.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/kaeferjaeger" class="nicename" target="_blank">Kaeferjaeger</a></td>
                     </tr>
                     <tr>
@@ -352,7 +352,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/caido" target="_blank"><img src="https://offsec.tools/img/tools/d37eedfd8027239e1b63c89739509596.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/caido" target="_blank"><img src="https://assets.offsec.tools/tools/caido-9234.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/caido" class="nicename" target="_blank">caido</a></td>
                     </tr>
                     <tr>
@@ -362,7 +362,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/burpgpt" target="_blank"><img src="https://offsec.tools/img/tools/4f7d16f8d8bf023157ec3a442d3191fb.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/burpgpt" target="_blank"><img src="https://assets.offsec.tools/tools/burpgpt-4048.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/burpgpt" class="nicename" target="_blank">BurpGPT</a></td>
                     </tr>
                     <tr>
@@ -372,7 +372,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/ripgen" target="_blank"><img src="https://offsec.tools/img/tools/806e904c429520365526460888879dc1.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/ripgen" target="_blank"><img src="https://assets.offsec.tools/tools/ripgen-3516.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/ripgen" class="nicename" target="_blank">ripgen</a></td>
                     </tr>
                     <tr>
@@ -382,7 +382,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/go-stare" target="_blank"><img src="https://offsec.tools/img/tools/5824141489d2d70743409bdea00e5fa7.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/go-stare" target="_blank"><img src="https://assets.offsec.tools/tools/go-stare-7953.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/go-stare" class="nicename" target="_blank">go-stare</a></td>
                     </tr>
                     <tr>
@@ -392,7 +392,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/evilgophish" target="_blank"><img src="https://offsec.tools/img/tools/0b4c8a8d314a9abe6d05ab3f1cf93566.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/evilgophish" target="_blank"><img src="https://assets.offsec.tools/tools/evilgophish-8031.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/evilgophish" class="nicename" target="_blank">evilgophish</a></td>
                     </tr>
                     <tr>
@@ -402,7 +402,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/gophish" target="_blank"><img src="https://offsec.tools/img/tools/de8aaf611813d26060f5698c64ae14bd.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/gophish" target="_blank"><img src="https://assets.offsec.tools/tools/gophish-7691.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/gophish" class="nicename" target="_blank">GoPhish</a></td>
                     </tr>
                     <tr>
