--- a/static/newsletter/newsletter-23.html
+++ b/static/newsletter/newsletter-23.html
@@ -149,7 +149,7 @@ Happy hacking !
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/keyhacks.sh" target="_blank"><img src="https://offsec.tools/img/tools/keyhacks.sh.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/keyhacks.sh" target="_blank"><img src="https://assets.offsec.tools/tools/keyhacks.sh-3894.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -163,7 +163,7 @@ Happy hacking !
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/sqlmate" target="_blank"><img src="https://offsec.tools/img/tools/sqlmate.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/sqlmate" target="_blank"><img src="https://assets.offsec.tools/tools/sqlmate-2699.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -177,7 +177,7 @@ Happy hacking !
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/wappalyzer" target="_blank"><img src="https://offsec.tools/img/tools/wappalyzer.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/wappalyzer" target="_blank"><img src="https://assets.offsec.tools/tools/wappalyzer-3929.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -191,7 +191,7 @@ Happy hacking !
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dom-based-xss-finder" target="_blank"><img src="https://offsec.tools/img/tools/dom-based-xss-finder.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dom-based-xss-finder" target="_blank"><img src="https://assets.offsec.tools/tools/dom-based-xss-finder-6013.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -205,7 +205,7 @@ Happy hacking !
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/scavenger" target="_blank"><img src="https://offsec.tools/img/tools/1c6be8ff0677ce68fe0e4659a5a70c20.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/scavenger" target="_blank"><img src="https://assets.offsec.tools/tools/scavenger-3755.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -219,7 +219,7 @@ Happy hacking !
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ssrfmap" target="_blank"><img src="https://offsec.tools/img/tools/ssrfmap.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ssrfmap" target="_blank"><img src="https://assets.offsec.tools/tools/ssrfmap-9808.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -233,7 +233,7 @@ Happy hacking !
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/sharphose" target="_blank"><img src="https://offsec.tools/img/tools/sharphose.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/sharphose" target="_blank"><img src="https://assets.offsec.tools/tools/sharphose-3353.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -247,7 +247,7 @@ Happy hacking !
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/nessus" target="_blank"><img src="https://offsec.tools/img/tools/nessus.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/nessus" target="_blank"><img src="https://assets.offsec.tools/tools/nessus-2486.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -261,7 +261,7 @@ Happy hacking !
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyshell" target="_blank"><img src="https://offsec.tools/img/tools/pyshell.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyshell" target="_blank"><img src="https://assets.offsec.tools/tools/pyshell-4129.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -275,7 +275,7 @@ Happy hacking !
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/linwinpwn" target="_blank"><img src="https://offsec.tools/img/tools/linwinpwn.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/linwinpwn" target="_blank"><img src="https://assets.offsec.tools/tools/linwinpwn-6063.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -299,7 +299,7 @@ Happy hacking !
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/whoisxmlapi" target="_blank"><img src="https://offsec.tools/img/tools/5ac0fbd9c6715143f1b9f587f720cc1f.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/whoisxmlapi" target="_blank"><img src="https://assets.offsec.tools/tools/whoisxmlapi-6033.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/whoisxmlapi" class="nicename" target="_blank">WhoisXMLAPI</a></td>
                     </tr>
                     <tr>
@@ -309,7 +309,7 @@ Happy hacking !
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/gathercontacts" target="_blank"><img src="https://offsec.tools/img/tools/a366df744dab5945648158e122250554.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/gathercontacts" target="_blank"><img src="https://assets.offsec.tools/tools/gathercontacts-6168.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/gathercontacts" class="nicename" target="_blank">GatherContacts</a></td>
                     </tr>
                     <tr>
@@ -319,7 +319,7 @@ Happy hacking !
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/scavenger" target="_blank"><img src="https://offsec.tools/img/tools/1c6be8ff0677ce68fe0e4659a5a70c20.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/scavenger" target="_blank"><img src="https://assets.offsec.tools/tools/scavenger-3755.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/scavenger" class="nicename" target="_blank">Scavenger</a></td>
                     </tr>
                     <tr>
@@ -329,7 +329,7 @@ Happy hacking !
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/trivy" target="_blank"><img src="https://offsec.tools/img/tools/5449084aaf64647c34b49a4edca03033.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/trivy" target="_blank"><img src="https://assets.offsec.tools/tools/trivy-7056.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/trivy" class="nicename" target="_blank">Trivy</a></td>
                     </tr>
                     <tr>
@@ -339,7 +339,7 @@ Happy hacking !
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/wordlistgen" target="_blank"><img src="https://offsec.tools/img/tools/2576433ca8714f4e07fa2485f8832916.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/wordlistgen" target="_blank"><img src="https://assets.offsec.tools/tools/wordlistgen-3191.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/wordlistgen" class="nicename" target="_blank">wordlistgen</a></td>
                     </tr>
                     <tr>
