--- a/static/newsletter/newsletter-24.html
+++ b/static/newsletter/newsletter-24.html
@@ -142,7 +142,7 @@
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/qsinject" target="_blank"><img src="https://offsec.tools/img/tools/qsinject.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/qsinject" target="_blank"><img src="https://assets.offsec.tools/tools/qsinject-8124.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -156,7 +156,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/wappalyzer" target="_blank"><img src="https://offsec.tools/img/tools/wappalyzer.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/wappalyzer" target="_blank"><img src="https://assets.offsec.tools/tools/wappalyzer-3929.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -170,7 +170,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/msdat" target="_blank"><img src="https://offsec.tools/img/tools/msdat.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/msdat" target="_blank"><img src="https://assets.offsec.tools/tools/msdat-2150.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -184,7 +184,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/sqltruncsanner" target="_blank"><img src="https://offsec.tools/img/tools/sqltruncsanner.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/sqltruncsanner" target="_blank"><img src="https://assets.offsec.tools/tools/sqltruncsanner-1253.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -198,7 +198,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/cookie_crimes" target="_blank"><img src="https://offsec.tools/img/tools/f7ac42e31e3aef3efcc2af30cb49976a.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/cookie_crimes" target="_blank"><img src="https://assets.offsec.tools/tools/cookie_crimes-1249.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -212,7 +212,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ysoserial.net" target="_blank"><img src="https://offsec.tools/img/tools/ysoserial.net.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ysoserial.net" target="_blank"><img src="https://assets.offsec.tools/tools/ysoserial.net-4799.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -226,7 +226,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/smbat" target="_blank"><img src="https://offsec.tools/img/tools/1c7b55bee3dea488d2588518dada7743.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/smbat" target="_blank"><img src="https://assets.offsec.tools/tools/smbat-8977.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -240,7 +240,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/burpgpt" target="_blank"><img src="https://offsec.tools/img/tools/4f7d16f8d8bf023157ec3a442d3191fb.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/burpgpt" target="_blank"><img src="https://assets.offsec.tools/tools/burpgpt-4048.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -254,7 +254,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/bugcrowd-vrt" target="_blank"><img src="https://offsec.tools/img/tools/bugcrowd-vrt.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/bugcrowd-vrt" target="_blank"><img src="https://assets.offsec.tools/tools/bugcrowd-vrt-4311.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -268,7 +268,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mr.sip" target="_blank"><img src="https://offsec.tools/img/tools/85960734e25af3261b93e69a638d2650.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mr.sip" target="_blank"><img src="https://assets.offsec.tools/tools/mr.sip-4038.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -292,7 +292,7 @@
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/sharpc2" target="_blank"><img src="https://offsec.tools/img/tools/8bf5932eff0f807f7d3b36b37d714e8b.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/sharpc2" target="_blank"><img src="https://assets.offsec.tools/tools/sharpc2-2062.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/sharpc2" class="nicename" target="_blank">SharpC2</a></td>
                     </tr>
                     <tr>
@@ -302,7 +302,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/nimplant" target="_blank"><img src="https://offsec.tools/img/tools/a3a6e1fe8eaacaa310f976c2fd9e35bf.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/nimplant" target="_blank"><img src="https://assets.offsec.tools/tools/nimplant-6541.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/nimplant" class="nicename" target="_blank">NimPlant</a></td>
                     </tr>
                     <tr>
@@ -312,7 +312,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/weakestlink" target="_blank"><img src="https://offsec.tools/img/tools/b28485a47d1fa548935dce41df48d5b6.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/weakestlink" target="_blank"><img src="https://assets.offsec.tools/tools/weakestlink-2490.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/weakestlink" class="nicename" target="_blank">WeakestLink</a></td>
                     </tr>
                     <tr>
@@ -322,7 +322,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jsluice" target="_blank"><img src="https://offsec.tools/img/tools/3dcfbb0cc6edccf614827ef68005e8f0.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jsluice" target="_blank"><img src="https://assets.offsec.tools/tools/jsluice-7757.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/jsluice" class="nicename" target="_blank">jsluice</a></td>
                     </tr>
                     <tr>
@@ -332,7 +332,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/brute-ratel" target="_blank"><img src="https://offsec.tools/img/tools/1c682dfa1061258e69d1d72ce02a5a70.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/brute-ratel" target="_blank"><img src="https://assets.offsec.tools/tools/brute-ratel-8356.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/brute-ratel" class="nicename" target="_blank">brute ratel</a></td>
                     </tr>
                     <tr>
@@ -342,7 +342,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jswzl" target="_blank"><img src="https://offsec.tools/img/tools/2eda7a0d6f6bb58e20122cafccce4290.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jswzl" target="_blank"><img src="https://assets.offsec.tools/tools/jswzl-5762.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/jswzl" class="nicename" target="_blank">jswzl</a></td>
                     </tr>
                     <tr>
