--- a/static/newsletter/newsletter-25.html
+++ b/static/newsletter/newsletter-25.html
@@ -154,7 +154,7 @@ Happy hacking my friends :)
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/storm-breaker" target="_blank"><img src="https://offsec.tools/img/tools/stormbreaker.jpeg" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/storm-breaker" target="_blank"><img src="https://assets.offsec.tools/tools/storm-breaker-7022.jpeg" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -168,7 +168,7 @@ Happy hacking my friends :)
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/hamburglar" target="_blank"><img src="https://offsec.tools/img/tools/hamburglar.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/hamburglar" target="_blank"><img src="https://assets.offsec.tools/tools/hamburglar-4121.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -182,7 +182,7 @@ Happy hacking my friends :)
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/upload_bypass" target="_blank"><img src="https://offsec.tools/img/tools/upload_bypass.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/upload_bypass" target="_blank"><img src="https://assets.offsec.tools/tools/upload_bypass-8337.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -196,7 +196,7 @@ Happy hacking my friends :)
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/yersinia" target="_blank"><img src="https://offsec.tools/img/tools/yersinia.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/yersinia" target="_blank"><img src="https://assets.offsec.tools/tools/yersinia-9428.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -210,7 +210,7 @@ Happy hacking my friends :)
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/frida" target="_blank"><img src="https://offsec.tools/img/tools/d87b0580b917d891799737e6ed04748e.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/frida" target="_blank"><img src="https://assets.offsec.tools/tools/frida-6894.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -224,7 +224,7 @@ Happy hacking my friends :)
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pentesterlab" target="_blank"><img src="https://offsec.tools/img/tools/pentesterlab.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pentesterlab" target="_blank"><img src="https://assets.offsec.tools/tools/pentesterlab-4972.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -238,7 +238,7 @@ Happy hacking my friends :)
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/grendel-scan" target="_blank"><img src="https://offsec.tools/img/tools/grendel-scan.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/grendel-scan" target="_blank"><img src="https://assets.offsec.tools/tools/grendel-scan-3269.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -252,7 +252,7 @@ Happy hacking my friends :)
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/burpbeautifier" target="_blank"><img src="https://offsec.tools/img/tools/burpbeautifier.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/burpbeautifier" target="_blank"><img src="https://assets.offsec.tools/tools/burpbeautifier-4890.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -266,7 +266,7 @@ Happy hacking my friends :)
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dom-red" target="_blank"><img src="https://offsec.tools/img/tools/dom-red.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dom-red" target="_blank"><img src="https://assets.offsec.tools/tools/dom-red-4136.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -280,7 +280,7 @@ Happy hacking my friends :)
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/binwalk" target="_blank"><img src="https://offsec.tools/img/tools/94c7fec9c2bc18731951ec9cff3554e7.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/binwalk" target="_blank"><img src="https://assets.offsec.tools/tools/binwalk-1560.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -304,7 +304,7 @@ Happy hacking my friends :)
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/droopescan" target="_blank"><img src="https://offsec.tools/img/tools/5a7c807b1c58c88af3af308cf49f5d21.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/droopescan" target="_blank"><img src="https://assets.offsec.tools/tools/droopescan-6123.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/droopescan" class="nicename" target="_blank">droopescan</a></td>
                     </tr>
                     <tr>
@@ -314,7 +314,7 @@ Happy hacking my friends :)
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/whatbreach" target="_blank"><img src="https://offsec.tools/img/tools/06bbe9d9c0677028441b1a5df0d12043.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/whatbreach" target="_blank"><img src="https://assets.offsec.tools/tools/whatbreach-6253.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/whatbreach" class="nicename" target="_blank">WhatBreach</a></td>
                     </tr>
                     <tr>
@@ -324,7 +324,7 @@ Happy hacking my friends :)
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/ufonet" target="_blank"><img src="https://offsec.tools/img/tools/6b26ac629870b1aa775bde59a55ea68c.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/ufonet" target="_blank"><img src="https://assets.offsec.tools/tools/ufonet-1265.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/ufonet" class="nicename" target="_blank">ufonet</a></td>
                     </tr>
                     <tr>
@@ -334,7 +334,7 @@ Happy hacking my friends :)
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/pwnagotchi" target="_blank"><img src="https://offsec.tools/img/tools/0b65c4e760abb05d01dcaa37d5eb40ad.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/pwnagotchi" target="_blank"><img src="https://assets.offsec.tools/tools/pwnagotchi-3718.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/pwnagotchi" class="nicename" target="_blank">pwnagotchi</a></td>
                     </tr>
                     <tr>
@@ -344,7 +344,7 @@ Happy hacking my friends :)
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/wifi-bruteforcer-fsecurify" target="_blank"><img src="https://offsec.tools/img/tools/726ed829c8a1505a8eb4987370fe6b5c.jpeg" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/wifi-bruteforcer-fsecurify" target="_blank"><img src="https://assets.offsec.tools/tools/wifi-bruteforcer-fsecurify-1896.jpeg" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/wifi-bruteforcer-fsecurify" class="nicename" target="_blank">wifi-bruteforcer-fsecurify</a></td>
                     </tr>
                     <tr>
