--- a/static/newsletter/newsletter-6.html
+++ b/static/newsletter/newsletter-6.html
@@ -148,7 +148,7 @@ Gwen.
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mimikatz" target="_blank"><img src="https://offsec.tools/img/tools/mimikatz.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mimikatz" target="_blank"><img src="https://assets.offsec.tools/tools/mimikatz-7872.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -162,7 +162,7 @@ Gwen.
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/reconness" target="_blank"><img src="https://offsec.tools/img/tools/reconness.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/reconness" target="_blank"><img src="https://assets.offsec.tools/tools/reconness-9049.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -176,7 +176,7 @@ Gwen.
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/apidor" target="_blank"><img src="https://offsec.tools/img/tools/apidor.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/apidor" target="_blank"><img src="https://assets.offsec.tools/tools/apidor-1385.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -190,7 +190,7 @@ Gwen.
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/awsloot" target="_blank"><img src="https://offsec.tools/img/tools/awsloot.gif" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/awsloot" target="_blank"><img src="https://assets.offsec.tools/tools/awsloot-2146.gif" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -204,7 +204,7 @@ Gwen.
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/getsploit" target="_blank"><img src="https://offsec.tools/img/tools/getsploit.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/getsploit" target="_blank"><img src="https://assets.offsec.tools/tools/getsploit-3156.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -218,7 +218,7 @@ Gwen.
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/fireshodanmap" target="_blank"><img src="https://offsec.tools/img/tools/fireshodanmap.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/fireshodanmap" target="_blank"><img src="https://assets.offsec.tools/tools/fireshodanmap-6357.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -232,7 +232,7 @@ Gwen.
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/autorize" target="_blank"><img src="https://offsec.tools/img/tools/autorize.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/autorize" target="_blank"><img src="https://assets.offsec.tools/tools/autorize-5969.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -246,7 +246,7 @@ Gwen.
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/hash-buster" target="_blank"><img src="https://offsec.tools/img/tools/hash-buster.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/hash-buster" target="_blank"><img src="https://assets.offsec.tools/tools/hash-buster-2285.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -260,7 +260,7 @@ Gwen.
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ldap-password-hunter" target="_blank"><img src="https://offsec.tools/img/tools/tool-ldap-password-hunter.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ldap-password-hunter" target="_blank"><img src="https://assets.offsec.tools/tools/ldap-password-hunter-1008.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -274,7 +274,7 @@ Gwen.
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/assetfinder" target="_blank"><img src="https://offsec.tools/img/tools/assetfinder.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/assetfinder" target="_blank"><img src="https://assets.offsec.tools/tools/assetfinder-9738.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -298,7 +298,7 @@ Gwen.
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jspector" target="_blank"><img src="https://offsec.tools/img/tools/jspector.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jspector" target="_blank"><img src="https://assets.offsec.tools/tools/jspector-3684.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/jspector" class="nicename" target="_blank">JSpector</a></td>
                     </tr>
                     <tr>
@@ -308,7 +308,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/secretfinder" target="_blank"><img src="https://offsec.tools/img/tools/secretfinder.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/secretfinder" target="_blank"><img src="https://assets.offsec.tools/tools/secretfinder-3963.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/secretfinder" class="nicename" target="_blank">SecretFinder</a></td>
                     </tr>
                     <tr>
@@ -318,7 +318,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/github-endpoints" target="_blank"><img src="https://offsec.tools/img/tools/github-endpoints.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/github-endpoints" target="_blank"><img src="https://assets.offsec.tools/tools/github-endpoints-2455.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/github-endpoints" class="nicename" target="_blank">github-endpoints</a></td>
                     </tr>
                     <tr>
@@ -328,7 +328,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/github-regexp" target="_blank"><img src="https://offsec.tools/img/tools/github-regexp.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/github-regexp" target="_blank"><img src="https://assets.offsec.tools/tools/github-regexp-5175.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/github-regexp" class="nicename" target="_blank">github-regexp</a></td>
                     </tr>
                     <tr>
@@ -338,7 +338,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/keyhacks.sh" target="_blank"><img src="https://offsec.tools/img/tools/keyhacks.sh.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/keyhacks.sh" target="_blank"><img src="https://assets.offsec.tools/tools/keyhacks.sh-3894.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/keyhacks.sh" class="nicename" target="_blank">keyhacks.sh</a></td>
                     </tr>
                     <tr>
@@ -348,7 +348,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/dismap" target="_blank"><img src="https://offsec.tools/img/tools/dismap---asset-discovery-and-identification-tool.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/dismap" target="_blank"><img src="https://assets.offsec.tools/tools/dismap-3259.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/dismap" class="nicename" target="_blank">Dismap</a></td>
                     </tr>
                     <tr>
@@ -358,7 +358,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/dnscat2" target="_blank"><img src="https://offsec.tools/img/tools/dnscat2.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/dnscat2" target="_blank"><img src="https://assets.offsec.tools/tools/dnscat2-8274.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/dnscat2" class="nicename" target="_blank">dnscat2</a></td>
                     </tr>
                     <tr>
@@ -368,7 +368,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/pyexfil" target="_blank"><img src="https://offsec.tools/img/tools/pyexfil.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/pyexfil" target="_blank"><img src="https://assets.offsec.tools/tools/pyexfil-2594.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/pyexfil" class="nicename" target="_blank">PyExfil</a></td>
                     </tr>
                     <tr>
@@ -378,7 +378,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jsleak" target="_blank"><img src="https://offsec.tools/img/tools/jsleak.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/jsleak" target="_blank"><img src="https://assets.offsec.tools/tools/jsleak-8990.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/jsleak" class="nicename" target="_blank">jsleak</a></td>
                     </tr>
                     <tr>
@@ -388,7 +388,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/urless" target="_blank"><img src="https://offsec.tools/img/tools/urless.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/urless" target="_blank"><img src="https://assets.offsec.tools/tools/urless-6316.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/urless" class="nicename" target="_blank">urless</a></td>
                     </tr>
                     <tr>
@@ -398,7 +398,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/gd-thief" target="_blank"><img src="https://offsec.tools/img/tools/gd-thief.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/gd-thief" target="_blank"><img src="https://assets.offsec.tools/tools/gd-thief-3768.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/gd-thief" class="nicename" target="_blank">GD-Thief</a></td>
                     </tr>
                     <tr>
@@ -408,7 +408,7 @@ Gwen.
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/storm-breaker" target="_blank"><img src="https://offsec.tools/img/tools/stormbreaker.jpeg" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/storm-breaker" target="_blank"><img src="https://assets.offsec.tools/tools/storm-breaker-7022.jpeg" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/storm-breaker" class="nicename" target="_blank">Storm breaker</a></td>
                     </tr>
                     <tr>
