--- a/static/newsletter/newsletter-8.html
+++ b/static/newsletter/newsletter-8.html
@@ -151,7 +151,7 @@
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/bountyplz" target="_blank"><img src="https://offsec.tools/img/tools/bountyplz.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/bountyplz" target="_blank"><img src="https://assets.offsec.tools/tools/bountyplz-3293.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -165,7 +165,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/have-i-been-pwned" target="_blank"><img src="https://offsec.tools/img/tools/have-i-been-pwned.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/have-i-been-pwned" target="_blank"><img src="https://assets.offsec.tools/tools/have-i-been-pwned-4120.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -179,7 +179,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/metahttp" target="_blank"><img src="https://offsec.tools/img/tools/metahttp.gif" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/metahttp" target="_blank"><img src="https://assets.offsec.tools/tools/metahttp-3800.gif" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -193,7 +193,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pentesterlab" target="_blank"><img src="https://offsec.tools/img/tools/pentesterlab.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pentesterlab" target="_blank"><img src="https://assets.offsec.tools/tools/pentesterlab-4972.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -207,7 +207,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyexfil" target="_blank"><img src="https://offsec.tools/img/tools/pyexfil.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/pyexfil" target="_blank"><img src="https://assets.offsec.tools/tools/pyexfil-2594.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -221,7 +221,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/git-vuln-finder" target="_blank"><img src="https://offsec.tools/img/tools/git-vuln-finder.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/git-vuln-finder" target="_blank"><img src="https://assets.offsec.tools/tools/git-vuln-finder-1050.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -235,7 +235,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/shelling" target="_blank"><img src="https://offsec.tools/img/tools/shelling.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/shelling" target="_blank"><img src="https://assets.offsec.tools/tools/shelling-2428.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -249,7 +249,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/authz" target="_blank"><img src="https://offsec.tools/img/tools/authz.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/authz" target="_blank"><img src="https://assets.offsec.tools/tools/authz-5212.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -263,7 +263,7 @@
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/async-dns-brute" target="_blank"><img src="https://offsec.tools/img/tools/async-dns-brute.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/async-dns-brute" target="_blank"><img src="https://assets.offsec.tools/tools/async-dns-brute-9543.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -277,7 +277,7 @@
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/trurl" target="_blank"><img src="https://offsec.tools/img/tools/trurl.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/trurl" target="_blank"><img src="https://assets.offsec.tools/tools/trurl-7177.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -301,7 +301,7 @@
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/wmiexec-pro" target="_blank"><img src="https://offsec.tools/img/tools/wmiexec-pro.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/wmiexec-pro" target="_blank"><img src="https://assets.offsec.tools/tools/wmiexec-pro-5459.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/wmiexec-pro" class="nicename" target="_blank">wmiexec-Pro</a></td>
                     </tr>
                     <tr>
@@ -311,7 +311,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/nmapautomater" target="_blank"><img src="https://offsec.tools/img/tools/nmapautomater.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/nmapautomater" target="_blank"><img src="https://assets.offsec.tools/tools/nmapautomater-6364.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/nmapautomater" class="nicename" target="_blank">nmapAutomater</a></td>
                     </tr>
                     <tr>
@@ -321,7 +321,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/wmiexec-regout" target="_blank"><img src="https://offsec.tools/img/tools/wmiexec-regout.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/wmiexec-regout" target="_blank"><img src="https://assets.offsec.tools/tools/wmiexec-regout-8570.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/wmiexec-regout" class="nicename" target="_blank">wmiexec-RegOut</a></td>
                     </tr>
                     <tr>
@@ -331,7 +331,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/impacket" target="_blank"><img src="https://offsec.tools/img/tools/impacket.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/impacket" target="_blank"><img src="https://assets.offsec.tools/tools/impacket-1687.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/impacket" class="nicename" target="_blank">impacket</a></td>
                     </tr>
                     <tr>
@@ -341,7 +341,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/malbuzz" target="_blank"><img src="https://offsec.tools/img/tools/malbuzz.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/malbuzz" target="_blank"><img src="https://assets.offsec.tools/tools/malbuzz-3468.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/malbuzz" class="nicename" target="_blank">MalBuzz</a></td>
                     </tr>
                     <tr>
@@ -351,7 +351,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/webscrape" target="_blank"><img src="https://offsec.tools/img/tools/webscrape.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/webscrape" target="_blank"><img src="https://assets.offsec.tools/tools/webscrape-2866.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/webscrape" class="nicename" target="_blank">WebScrape</a></td>
                     </tr>
                     <tr>
@@ -361,7 +361,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/gpt_vuln-analyzer" target="_blank"><img src="https://offsec.tools/img/tools/gpt_vuln-analyzer.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/gpt_vuln-analyzer" target="_blank"><img src="https://assets.offsec.tools/tools/gpt_vuln-analyzer-1620.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/gpt_vuln-analyzer" class="nicename" target="_blank">GPT_Vuln-Analyzer</a></td>
                     </tr>
                     <tr>
@@ -371,7 +371,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/quadrainspect" target="_blank"><img src="https://offsec.tools/img/tools/quadrainspect.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/quadrainspect" target="_blank"><img src="https://assets.offsec.tools/tools/quadrainspect-7469.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/quadrainspect" class="nicename" target="_blank">QuadraInspect</a></td>
                     </tr>
                     <tr>
@@ -381,7 +381,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/malwarebazaar" target="_blank"><img src="https://offsec.tools/img/tools/malwarebazaar.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/malwarebazaar" target="_blank"><img src="https://assets.offsec.tools/tools/malwarebazaar-2464.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/malwarebazaar" class="nicename" target="_blank">MalwareBazaar</a></td>
                     </tr>
                     <tr>
@@ -391,7 +391,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/nmap-api" target="_blank"><img src="https://offsec.tools/img/tools/nmap-api.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/nmap-api" target="_blank"><img src="https://assets.offsec.tools/tools/nmap-api-1377.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/nmap-api" class="nicename" target="_blank">Nmap-API</a></td>
                     </tr>
                     <tr>
@@ -401,7 +401,7 @@
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/mimicry" target="_blank"><img src="https://offsec.tools/img/tools/mimicry.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/mimicry" target="_blank"><img src="https://assets.offsec.tools/tools/mimicry-8980.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/mimicry" class="nicename" target="_blank">Mimicry</a></td>
                     </tr>
                     <tr>
