--- a/static/newsletter/newsletter-22.html
+++ b/static/newsletter/newsletter-22.html
@@ -147,7 +147,7 @@ Happy hacking !
             <tr>
                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ldap-password-hunter" target="_blank"><img src="https://offsec.tools/img/tools/tool-ldap-password-hunter.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/ldap-password-hunter" target="_blank"><img src="https://assets.offsec.tools/tools/ldap-password-hunter-1008.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -161,7 +161,7 @@ Happy hacking !
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/whatsmyname" target="_blank"><img src="https://offsec.tools/img/tools/whatsmyname.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/whatsmyname" target="_blank"><img src="https://assets.offsec.tools/tools/whatsmyname-7350.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -175,7 +175,7 @@ Happy hacking !
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/unix-privesc-check" target="_blank"><img src="https://offsec.tools/img/tools/unix-privesc-check.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/unix-privesc-check" target="_blank"><img src="https://assets.offsec.tools/tools/unix-privesc-check-5942.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -189,7 +189,7 @@ Happy hacking !
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/yoga" target="_blank"><img src="https://offsec.tools/img/tools/yoga.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/yoga" target="_blank"><img src="https://assets.offsec.tools/tools/yoga-9304.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -203,7 +203,7 @@ Happy hacking !
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/scapy" target="_blank"><img src="https://offsec.tools/img/tools/scapy.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/scapy" target="_blank"><img src="https://assets.offsec.tools/tools/scapy-1311.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -217,7 +217,7 @@ Happy hacking !
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dvcs-ripper" target="_blank"><img src="https://offsec.tools/img/tools/dvcs-ripper.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/dvcs-ripper" target="_blank"><img src="https://assets.offsec.tools/tools/dvcs-ripper-8274.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -231,7 +231,7 @@ Happy hacking !
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/smbcrawler" target="_blank"><img src="https://offsec.tools/img/tools/88ece6a210201d88a45c6bc9dbc03030.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/smbcrawler" target="_blank"><img src="https://assets.offsec.tools/tools/smbcrawler-5100.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -245,7 +245,7 @@ Happy hacking !
                                     <td width="50"></td>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/graphql-introspection-analyzer" target="_blank"><img src="https://offsec.tools/img/tools/graphql-introspection-analyzer.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/graphql-introspection-analyzer" target="_blank"><img src="https://assets.offsec.tools/tools/graphql-introspection-analyzer-1321.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -259,7 +259,7 @@ Happy hacking !
                                     </tr><tr height="40"><td></td></tr><tr>
                                             <td width="300" style="vertical-align:baseline;"><table border="0" cellpadding="0" cellspacing="0" align="center">
                     <tr>
-                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mosca" target="_blank"><img src="https://offsec.tools/img/tools/mosca.png" width="250" height="150" /></a></td>
+                        <td height="150" align="center" width="250"><a href="https://offsec.tools/tool/mosca" target="_blank"><img src="https://assets.offsec.tools/tools/mosca-2857.png" width="250" height="150" /></a></td>
                     </tr>
                     <tr height="10"><td></td></tr>
                     <tr>
@@ -283,7 +283,7 @@ Happy hacking !
         <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600" align="center">
                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/xurlfind3r" target="_blank"><img src="https://offsec.tools/img/tools/d3e1d9868ae19ef6ca07b864d17a5e69.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/xurlfind3r" target="_blank"><img src="https://assets.offsec.tools/tools/xurlfind3r-4702.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/xurlfind3r" class="nicename" target="_blank">xurlfind3r</a></td>
                     </tr>
                     <tr>
@@ -293,7 +293,7 @@ Happy hacking !
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/cake-fuzzer" target="_blank"><img src="https://offsec.tools/img/tools/0497a73241c5346e7a44d674ef8cd08f.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/cake-fuzzer" target="_blank"><img src="https://assets.offsec.tools/tools/cake-fuzzer-5693.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/cake-fuzzer" class="nicename" target="_blank">Cake Fuzzer</a></td>
                     </tr>
                     <tr>
@@ -303,7 +303,7 @@ Happy hacking !
                                     <tr height="50"><td><hr class="sep2" /></td></tr>
                                             <tr><td><table border="0" cellpadding="0" cellspacing="0" width="600">
                     <tr class="align_l">
-                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/dehashed" target="_blank"><img src="https://offsec.tools/img/tools/d7a92cbb280031fda0665eaba392ea07.png" width="200" height="120" /></a></td>
+                        <td rowspan="3" width="200"><a href="https://offsec.tools/tool/dehashed" target="_blank"><img src="https://assets.offsec.tools/tools/dehashed-8115.png" width="200" height="120" /></a></td>
                         <td height="30" align="left"><a href="https://offsec.tools/tool/dehashed" class="nicename" target="_blank">DeHashed</a></td>
                     </tr>
                     <tr>
